--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,9 +105,12 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:${navigationVersion}"
     // endregion Navigation ========================================================================
     
-    // region  ======================================================================================
+    // region Paging ===============================================================================
     implementation "androidx.paging:paging-runtime-ktx:3.1.1"
-    // endregion  ===================================================================================
+    // endregion Paging ============================================================================
+
+    implementation "org.reduxkotlin:redux-kotlin-threadsafe-jvm:0.6.0"
+    implementation "org.reduxkotlin:redux-kotlin-thunk:0.6.0"
 }
 
 kapt {
